Fix dark mode search highlight contrast

--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@ mark {
 }
 
 .dark mark {
-  background-color: #422006;
+  background-color: #854d0e;
 }
 
 .results-enter {
